--- a/index.html
+++ b/index.html
@@ -631,6 +631,8 @@
                     <span class="tag">JavaScript</span>
                     <span class="tag">HTML</span>
                     <span class="tag">SQL</span>
+                    <span class="tag">CSS</span>
+                    <span class="tag">TypeScript</span>
                 </div>
                 
                 <h3>Языки:</h3>
