--- a/index.html
+++ b/index.html
@@ -632,7 +632,6 @@
                     <span class="tag">HTML</span>
                     <span class="tag">SQL</span>
                     <span class="tag">CSS</span>
-                    <span class="tag">TypeScript</span>
                 </div>
                 
                 <h3>Языки:</h3>
@@ -707,6 +706,40 @@
                         <li>Плавного масштабирования и панорамирования</li>
                     </ul>
                     <a href="https://github.com/KOTorCAT/projects/tree/main/julia" class="project-link" target="_blank">GitHub проекта</a>
+                </div>
+
+                <div class="project">
+                    <h3>Справочник сотрудников</h3>
+                    <p><strong>Технологии:</strong> Python, Flask, SQLite, SQLAlchemy, HTML, CSS</p>
+                    <p>Разработал полнофункциональное веб-приложение для управления базой данных сотрудников</p>
+                    <ul>
+                        <li>Реализовал операции, пагинацию, импорт данных (генерация 1000+ записей) и экспорт в CSV</li>
+                        <li>Провел оптимизацию базы данных: создал индексы для ускорения выполнения запросов на 80-90%</li>
+                    </ul>
+                    <a href="https://github.com/KOTorCAT/projects/tree/main/BD_random" class="project-link" target="_blank">GitHub проекта</a>
+                </div>
+
+                <div class="project">
+                    <h3>Математическая библиотека для работы с матрицами на языке C</h3>
+                    <p><strong>Технологии:</strong> C, Check, Make, Gcov</p>
+                    <p>Реализовал полный цикл операций с матрицами: арифметические операции, вычисление определителя, транспонирование, поиск обратной матрицы и матрицы алгебраических дополнений</p>
+                    <ul>
+                        <li>Спроектировал систему сборки с помощью Makefile (цели: сборка статической библиотеки, запуск тестов, генерация отчета gcov_report)</li>
+                        <li>Достиг покрытия unit-тестами более 80% с использованием библиотеки Check</li>
+                        <li>Обеспечил обработку ошибок и валидацию входных данных для всех функций</li>
+                    </ul>
+                    <a href="https://github.com/KOTorCAT/projects/tree/main/matrix" class="project-link" target="_blank">GitHub проекта</a>
+                </div>
+
+                <div class="project">
+                    <h3>Участник кейс-чемпионата «AlfaFuture» в Сочи | Август 2025</h3>
+                    <p><strong>Технологии:</strong> Customer Development, Value Proposition Canvas, Product-Market Fit, Analytics & Research</p>
+                    <p>Разработка и прототипировании нового финансового продукта для молодёжной аудитории (14-22 лет), направленного на увеличение клиентской базы и вовлечённости для Альфа-Банка.</p>
+                    <ul>
+                        <li>В составе кросс-функциональной команды разрабатывал продуктовую стратегию и прототип финансового продукта для молодежной аудитории по задаче Альфа-Банка</li>
+                        <li>Приобрел практический опыт в анализе потребностей аудитории, продуктовом мышлении и командной работе в условиях ограниченного времени. Получил оценку решения от экспертов банковской сферы</li>
+                    </ul>
+                    <a href="https://github.com/KOTorCAT/projects/blob/main/alfa_case/%D0%94%D0%B8%D0%BF%D0%BB%D0%BE%D0%BC.pdf" class="project-link" target="_blank">Сертификат</a>
                 </div>
                 
                 <div class="project">
