--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                     <p>Разработка и прототипировании нового финансового продукта для молодёжной аудитории (14-22 лет), направленного на увеличение клиентской базы и вовлечённости для Альфа-Банка.</p>
                     <ul>
                         <li>В составе кросс-функциональной команды разрабатывал продуктовую стратегию и прототип финансового продукта для молодежной аудитории по задаче Альфа-Банка</li>
-                        <li>Приобрел практический опыт в анализе потребностей аудитории, продуктовом мышлении и командной работе в условиях ограниченного времени. Получил оценку решения от экспертов банковской сферы</li>
+                        <li>Приобрел практический опыт в анализе потребностей аудитории, продуктовом мышлении и командной работе в условиях ограниченного времени</li>
                     </ul>
                     <a href="https://github.com/KOTorCAT/projects/blob/main/alfa_case/%D0%94%D0%B8%D0%BF%D0%BB%D0%BE%D0%BC.pdf" class="project-link" target="_blank">Сертификат</a>
                 </div>
